refactor: 도메인 클래스 리팩토링으로 인한 코드 변경 (#35)